--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ I’m passionate about continuous learning and using data as a tool to solve rea
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Power BI Sales dashboard Project for Beginners</a></h3>
+                <h3 class="heading"><a href="https://github.com/alibhai78600/PowerBi_-Dashboard_-Project/blob/main/KHALID%20ECOMMERCE%20SALES%20DASHBOARD%20.jpg">Power BI Sales dashboard Project for Beginners</a></h3>
                 <p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.</p>
               </div>
             </div>
