--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ I’m passionate about continuous learning and using data as a tool to solve rea
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              <a href="https://github.com/alibhai78600/PowerBi_-Dashboard_-Project/blob/main/KHALID%20ECOMMERCE%20SALES%20DASHBOARD%20.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
