--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ I’m passionate about continuous learning and using data as a tool to solve rea
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/alibhai78600/PowerBi_-Dashboard_-Project/blob/main/KHALID%20ECOMMERCE%20SALES%20DASHBOARD%20.jpg">Power BI Sales dashboard Project for Beginners</a></h3>
-                <p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.</p>
+                <p>Designed a power bi dashboard for Khalid Store to track and analyze the online sales data acorss India.</p>
               </div>
             </div>
           </div>
