--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@ I’m passionate about continuous learning and using data as a tool to solve rea
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Data Analysis using Python Project for Beginners</a></h3>
-                <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
+                <h3 class="heading"><a href="https://github.com/alibhai78600/Python_Eid_Sales_Analysis/blob/main/Eid_Sales_Analysis.ipynb">Data Analysis using Python Project for Beginners</a></h3>
+                <p>Performed exploratory data analysis on Eid sales data using Python to improve the customer experience.</p>
               </div>
             </div>
           </div>
